# ai_doc_classifier

./: .gitignore  ARTICLE.md  CLAUDE.md  DESIGN.md  README.md  justfile  pyproject.toml  schema_sample.json
src/doc_extractor/: __init__.py  __main__.py  cli.py  constants.py  fanout.py  loader.py  merge.py  models.py  pipeline.py  prompts.py  provider.py
tests/: test_fanout.py  test_integration.py  test_loader.py  test_merge.py  test_models.py  test_pipeline.py  test_prompts.py  test_provider.py
